--- a/thread_runner/Makefile
+++ b/thread_runner/Makefile
@@ -1,11 +1,11 @@
-CFLAGS=-O0
+CFLAGS=-O2
 
 NUM_THREADS=4
 BUF_SIZE=20m
 OPTIONS=
 
 thread_runner:
-	gcc -g $(CFLAGS) thread_runner.c -lpthread -o thread_runner
+	gcc $(CFLAGS) thread_runner.c -lpthread -o thread_runner
 
 clean:
 	rm -f thread_runner
